ch06/6.3.1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sysinfo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sysinfo
  template:
    metadata:
      labels:
        app: sysinfo
    spec:
      containers:
      - name: sysinfo
        image: ekchoi3912/myapp3:v1
        ports:
        - containerPort: 5000
