ch06/6.3.1/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kshelp.r-e.kr
    secretName: my-tls-secret
  rules:
  - host: kshelp.r-e.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sysinfo-svc
            port:
              number: 80
